<resources>
    <string name="app_name">Navigation Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_berita">Berita</string>
    <string name="nav_fakultas">Fakultas</string>
    <string name="nav_jurusan">Jurusan</string>
    <string name="nav_jurnal">Jurnal</string>
    <string name="nav_kemahasiswaan">Kemahasiswaan</string>
    <string name="nav_siakad">Siakad</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Berita</item>
        <item>Fakultas</item>
        <item>Jurusan</item>
        <item>Jurnal</item>
        <item>Kemahasiswaan</item>
        <item>Siakad</item>
        <item>Settings</item>
        <item>About Us</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
